# software-satellite-lab

./: .cspell.json  .gitignore  CONTRIBUTING.md  PLAN.md  README.md  README_EN.md  SECURITY.md  pyproject.toml  requirements.txt
assets/: manifest.json
docs/: 00_core_anchor.md  01_product_doctrine.md  03_satellite_pack_system.md  04_security_permission_model.md  07_phase_milestone_roadmap.md  anti_drift_rules.md  commercial_oss_strategy_v4.md  demand_validation_demo_kit.md  design_backlog_hard_mode_closure.md  evidence_gated_git_review_workbench_design.md  evidence_pack_contributor_guide.md  failure_memory_review_demo.md  learning_finetune_prep_design.md  public_demo_walkthrough.md  recall_context_builder_design.md  recall_hit_quality_loop.md  release_v0_1_candidate.md  research_reproducibility_note.md  satellite_evidence_pack_contract.md  schema_changelog_and_compatibility.md  software_work_event_schema_notes.md  strategy_v2.md
examples/: review-risk-report.md
registers/: loopholes.csv
schemas/: agent_session_bundle.schema.json  artifact_ref.schema.json  backend_adoption_dossier.schema.json  evidence_graph.schema.json  evidence_support.schema.json  evidence_support_policy_registry.schema.json  pilot_evidence_record.schema.json  review_memory_fixture.schema.json  satellite_evidence_pack.schema.json  satellite_evidence_pack_v1.schema.json  satellite_pack_audit.schema.json  satellite_pack_manifest.schema.json
scripts/: agent_claims.py  agent_lane.py  agent_session_intake.py  artifact_schema.py  artifact_vault.py  asset_preprocessing.py  audio_service.py  doctor.py  (+50 more)
(+77 files in other folders)
